added teaching section

--- a/src/app/components/desktop/desktop.html
+++ b/src/app/components/desktop/desktop.html
@@ -1,8 +1,8 @@
 <main class="desktop">
 
   <div class="left-column">
-    <app-personal-info></app-personal-info>
-    <app-dvd-screen-saver></app-dvd-screen-saver>
+    <app-personal-info/>
+    <app-dvd-screen-saver/>
   </div>
 
   <div class="right-column">
@@ -22,11 +22,11 @@
       <div class="card-body">
         <div class="row">
           <div class="col-md-6 mb-3">
-            <app-teaching></app-teaching>
+            <app-teaching/>
           </div>
           <div class="col-md-6 mb-3">
-            <app-solved-problems></app-solved-problems>
-          </div>
+            <app-solved-problems/>
+          </div>a
         </div>
       </div>
     </section>
