--- a/src/app/components/desktop/personal-info/personal-info.html
+++ b/src/app/components/desktop/personal-info/personal-info.html
@@ -19,10 +19,10 @@
         </div>
       </div>
       <div class="col-md-8">
-        <p class="about-text">{{'DESCRIPTION.ABOUT_ME' | translate}}</p>
+        <p class="about-text">{{ 'DESCRIPTION.ABOUT_ME' | translate }}</p>
 
         <div class="contact-section mt-3">
-          <h6>{{'ABOUT_ME.CONTACT.TITLE' | translate}}</h6>
+          <h6>{{ 'ABOUT_ME.CONTACT.TITLE' | translate }}</h6>
           <div class="d-flex flex-column mb-2 contact-info">
             <div class="d-flex align-items-center mb-2">
               <img src="assets/img/email.png" alt="Email" class="contact-icon">
@@ -34,9 +34,11 @@
             </div>
           </div>
           <div class="d-flex flex-wrap social-links">
-            <a href="https://www.linkedin.com/in/cojovlad/" target="_blank" class="btn btn-sm btn-primary border-dark mr-2 mb-2">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/cojovlad/" target="_blank"
+               class="btn btn-sm btn-primary border-dark mr-2 mb-2">LinkedIn</a>
             <a href="https://github.com/cojovlad" target="_blank" class="btn btn-sm btn-primary border-dark mr-2 mb-2">GitHub</a>
-            <a href="assets/docs/Cojocariu_Vlad_Andrei_CV.pdf" target="_blank" class="btn btn-sm btn-primary border-dark mr-2 mb-2">CV</a>
+            <a href="assets/docs/Cojocariu_Vlad_Andrei_CV.pdf" target="_blank"
+               class="btn btn-sm btn-primary border-dark mr-2 mb-2">CV</a>
           </div>
         </div>
       </div>
