--- a/src/app/components/taskbar/taskbar.html
+++ b/src/app/components/taskbar/taskbar.html
@@ -5,15 +5,15 @@
       {{ 'TASKBAR.START' | translate }}
     </button>
 
-    <button class="taskbar-app" data-page="personal-info">
+    <button class="taskbar-app" data-page="personal-info" routerLink="/">
       <img src="assets/img/about-me.png" alt="{{ 'TASKBAR.ABOUT_ME' | translate }}">
       {{ 'TASKBAR.ABOUT_ME' | translate }}
     </button>
-    <button class="taskbar-app" data-page="teaching">
+    <button class="taskbar-app" data-page="teaching" routerLink="/teaching">
       <img src="assets/img/teaching.png" alt="{{ 'TASKBAR.TEACHING' | translate }}">
       {{ 'TASKBAR.TEACHING' | translate }}
     </button>
-    <button class="taskbar-app" data-page="solved-problems">
+    <button class="taskbar-app" data-page="solved-problems" routerLink="/solved-problems">
       <img src="assets/img/solved-problems.png" alt="{{ 'TASKBAR.SOLVED_PROBLEMS' | translate }}">
       {{ 'TASKBAR.SOLVED_PROBLEMS' | translate }}
     </button>
