--- a/src/app/components/desktop/dvd-screen-saver/dvd-screen-saver.html
+++ b/src/app/components/desktop/dvd-screen-saver/dvd-screen-saver.html
@@ -1,7 +1,7 @@
 <div class="win95-window dvd-screensaver-window">
   <div class="title-bar">
     <div class="title-bar-text">
-      <img src="assets/img/dvd-icon.png" alt="DVD" class="title-bar-icon">
+      <img src="assets/img/dvd.png" alt="DVD" class="title-bar-icon">
       DVD Screensaver
     </div>
     <div class="title-bar-controls">
