--- a/src/app/components/desktop/windows/overview/solved-problems/solved-problems.html
+++ b/src/app/components/desktop/windows/overview/solved-problems/solved-problems.html
@@ -1,7 +1,7 @@
 <div class="card h-100">
   <div class="card-header d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center">
-      <img src="assets/img/solved-problems.png" alt="{{ 'SOLVED_PROBLEMS.IMAGE_ALT' | translate }}" width="16"
+      <img src="assets/img/solution-problems.png" alt="{{ 'SOLVED_PROBLEMS.IMAGE_ALT' | translate }}" width="16"
            height="16" class="mr-2">
       <span>{{ 'SOLVED_PROBLEMS.TITLE' | translate }}</span>
     </div>
@@ -10,7 +10,7 @@
     <h6 class="card-title">{{ 'SOLVED_PROBLEMS.SUBTITLE' | translate }}</h6>
     <p class="card-text small">{{ 'SOLVED_PROBLEMS.DESCRIPTION' | translate }}</p>
     <button class="btn btn-sm btn-primary border-dark"
-            data-page="solved-problems">{{ 'SOLVED_PROBLEMS.OPEN_BUTTON' | translate }}
+            data-page="solved-problems" routerLink="/solved-problems">{{ 'SOLVED_PROBLEMS.OPEN_BUTTON' | translate }}
     </button>
   </div>
 </div>
