--- a/src/app/components/desktop/windows/overview/teaching/teaching.html
+++ b/src/app/components/desktop/windows/overview/teaching/teaching.html
@@ -9,7 +9,8 @@
   <div class="card-body text-center">
     <h6 class="card-title">{{ 'TEACHING.SUBTITLE' | translate }}</h6>
     <p class="card-text small">{{ 'TEACHING.DESCRIPTION' | translate }}</p>
-    <button class="btn btn-sm btn-primary border-dark" data-page="teaching">{{ 'TEACHING.OPEN_BUTTON' | translate }}
+    <button class="btn btn-sm btn-primary border-dark" data-page="teaching"
+            routerLink="/teaching">{{ 'TEACHING.OPEN_BUTTON' | translate }}
     </button>
   </div>
 </div>
