--- a/src/app/components/teaching-page/teaching-page.html
+++ b/src/app/components/teaching-page/teaching-page.html
@@ -1,7 +1,7 @@
 <div class="window-container">
   <div class="window win95-explorer">
     <div class="title-bar">
-      <div class="title-bar-text">Exploring - A:\</div>
+      <div class="title-bar-text">(C:)</div>
       <div class="title-bar-controls">
         <button aria-label="Minimize">_</button>
         <button aria-label="Maximize">□</button>
@@ -18,27 +18,60 @@
     </div>
 
     <div class="window-body">
-      <!-- Left folder tree -->
       <div class="tree-view">
         <ul>
-          <li>📁 Desktop</li>
           <li>
-            📁 My Computer
+            <img src="assets/img/desktop-teaching.png" alt="folder" class="file-icon"/>
+            Desktop
+          </li>
+          <li>
+            <img src="assets/img/folder.png" alt="folder" class="file-icon"/>
+            My Computer
             <ul>
-              <li>💾 3½ Floppy (A:)</li>
               <li>
-                💽 (C:)
+                <img src="assets/img/cd.png" alt="folder" class="file-icon"/>
+                (C:)
                 <ul>
-                  <li>📁 mssetup</li>
-                  <li>📁 CompuServe</li>
-                  <li>📁 Duke3D</li>
-                  <li>📁 Geary</li>
-                  <li>📁 Godzilla To…</li>
-                  <li>📁 learn word 97</li>
-                  <li>📁 MOffice</li>
-                  <li>📁 My Documents</li>
-                  <li>📁 My ZIP Files</li>
-                  <li>📁 Program Files</li>
+                  <li>
+                    <img src="assets/img/folder-item.png" alt="folder" class="file-icon"/>
+                    mssetup
+                  </li>
+                  <li>
+                    <img src="assets/img/folder-item.png" alt="folder" class="file-icon"/>
+                    CompuServe
+                  </li>
+                  <li>
+                    <img src="assets/img/folder-item.png" alt="folder" class="file-icon"/>
+                    Duke3D
+                  </li>
+                  <li>
+                    <img src="assets/img/folder-item.png" alt="folder" class="file-icon"/>
+                    Geary
+                  </li>
+                  <li>
+                    <img src="assets/img/folder-item.png" alt="folder" class="file-icon"/>
+                    Godzilla To…
+                  </li>
+                  <li>
+                    <img src="assets/img/folder-item.png" alt="folder" class="file-icon"/>
+                    learn word 97
+                  </li>
+                  <li>
+                    <img src="assets/img/folder-item.png" alt="folder" class="file-icon"/>
+                    MOffice
+                  </li>
+                  <li>
+                    <img src="assets/img/folder-item.png" alt="folder" class="file-icon"/>
+                    My Documents
+                  </li>
+                  <li>
+                    <img src="assets/img/folder-item.png" alt="folder" class="file-icon"/>
+                    My ZIP Files
+                  </li>
+                  <li>
+                    <img src="assets/img/folder-item.png" alt="folder" class="file-icon"/>
+                    Program Files
+                  </li>
                 </ul>
               </li>
             </ul>
@@ -46,7 +79,6 @@
         </ul>
       </div>
 
-      <!-- Right file list -->
       <div class="file-list">
         <table class="w95-table">
           <thead>
@@ -59,25 +91,34 @@
           </thead>
           <tbody>
           <tr>
-            <td>📁 New Folder</td>
+            <td>
+              <img src="assets/img/folder.png" alt="folder" class="file-icon"/>
+              New Folder
+            </td>
             <td></td>
             <td>File Folder</td>
             <td>6/6/98</td>
           </tr>
           <tr>
-            <td>📄 autoexec.bat</td>
+            <td>
+              <img src="assets/img/notepad.png" alt="folder" class="file-icon"/>
+              autoexec.bat</td>
             <td>125 bytes</td>
             <td>Batch File</td>
             <td>5/15/98</td>
           </tr>
           <tr>
-            <td>📄 config.sys</td>
+            <td>
+              <img src="assets/img/notepad.png" alt="folder" class="file-icon"/>
+              config.sys</td>
             <td>89 bytes</td>
             <td>System File</td>
             <td>5/15/98</td>
           </tr>
           <tr>
-            <td>📄 readme.txt</td>
+            <td>
+              <img src="assets/img/notepad.png" alt="folder" class="file-icon"/>
+              readme.txt</td>
             <td>2.5 KB</td>
             <td>Text Document</td>
             <td>6/1/98</td>
