--- a/src/app/components/taskbar/taskbar.html
+++ b/src/app/components/taskbar/taskbar.html
@@ -1,12 +1,14 @@
 <nav class="taskbar">
   <div class="taskbar-left">
     <button class="start-button">
+      <a href="https://en.wikipedia.org/wiki/Windows_95" target="_blank" rel="noopener noreferrer">
       <img [src]="startImg" alt="{{ 'TASKBAR.START' | translate }}">
       {{ 'TASKBAR.START' | translate }}
+      </a>
     </button>
 
     <button class="taskbar-app" data-page="personal-info" routerLink="/">
-      <img src="assets/img/about-me.png" alt="{{ 'TASKBAR.ABOUT_ME' | translate }}">
+      <img src="assets/img/about-me2.png" alt="{{ 'TASKBAR.ABOUT_ME' | translate }}">
       {{ 'TASKBAR.ABOUT_ME' | translate }}
     </button>
     <button class="taskbar-app" data-page="teaching" routerLink="/teaching">
@@ -14,7 +16,7 @@
       {{ 'TASKBAR.TEACHING' | translate }}
     </button>
     <button class="taskbar-app" data-page="solved-problems" routerLink="/solved-problems">
-      <img src="assets/img/solved-problems.png" alt="{{ 'TASKBAR.SOLVED_PROBLEMS' | translate }}">
+      <img src="assets/img/solution-problems.png" alt="{{ 'TASKBAR.SOLVED_PROBLEMS' | translate }}">
       {{ 'TASKBAR.SOLVED_PROBLEMS' | translate }}
     </button>
   </div>
